--- a/package.json
+++ b/package.json
@@ -5,25 +5,31 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot ",
-    "build": " webpack --progress --hide-modules"
+    "build": " webpack --progress --hide-modules",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-loader": "^7.1.5",
-    "babel-core": "^7.0.0-bridge.0",
+    "@form-create/element-ui": "^1.0.16",
+    "regenerator-runtime": "^0.13.5",
     "vue": "^2.6.11"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^26.1.0",
+    "babel-loader": "^7.1.5",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
+    "element-ui": "^2.13.2",
     "file-loader": "^6.0.0",
+    "jest": "^26.1.0",
     "less": "^3.11.2",
     "less-loader": "^6.1.0",
     "node-sass": "^4.14.1",
