--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,15 @@
 {
     "presets": [
         [
-            "env",
+            {
+                "env": {
+                    "test": {
+                        "plugins": [
+                            "@babel/plugin-transform-modules-commonjs"
+                        ]
+                    }
+                }
+            },
             {
                 "modules": false
             }
