--- a/.babelrc
+++ b/.babelrc
@@ -4,10 +4,28 @@
     "presets": [
         [
             {
+                "presets": [
+                    [
+                        "env",
+                        {
+                            "modules": false
+                        }
+                    ]
+                ],
                 "env": {
                     "test": {
                         "plugins": [
                             "@babel/plugin-transform-modules-commonjs"
+                        ],
+                        "presets": [
+                            [
+                                "env",
+                                {
+                                    "targets": {
+                                        "node": "current"
+                                    }
+                                }
+                            ]
                         ]
                     }
                 }
