--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@form-create/element-ui": "^1.0.16",
+    "axios": "^0.19.2",
     "regenerator-runtime": "^0.13.5",
     "vue": "^2.6.11"
   },
