--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot ",
     "build": " webpack --progress --hide-modules",
-    "test": "jest"
+    "test": "jest --watchAll"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,8 @@
   "dependencies": {
     "@form-create/element-ui": "^1.0.16",
     "axios": "^0.19.2",
+    "echarts": "^4.9.0",
+    "flush-promises": "^1.0.2",
     "regenerator-runtime": "^0.13.5",
     "vue": "^2.6.11"
   },
@@ -40,8 +42,10 @@
     "less-loader": "^6.1.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
+    "sinon": "^9.0.2",
     "vue-jest": "^3.0.6",
     "vue-loader": "^15.9.2",
+    "vue-router": "^3.4.1",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.43.0",
